# SDR

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  RX_TX_logs.txt  test.py  tmp.py
.github/workflows/: ci.yaml
examples/: a.out  ofdm_model.cpp
includes/: ImGUI_interface.h  OFDM.hpp  Receiver.hpp  Transmitter.hpp  complex_less.h
includes/RX/: complex_less.hpp  decoder.hpp  demodulator.hpp  synchronizer.hpp
includes/TX/: coder.hpp  modulator.hpp  overhead_encoder.hpp
includes/general/: filter.hpp  logger.hpp  subfuncs.hpp
includes/main/: pluto_lib.hpp
includes/pluto_lib/: pluto_lib.hpp
lesson_1/: FM_radio_rx.grc  untitled.py
lesson_10/: CMakeLists.txt
lesson_10/includes/: demodulation.h  subfuncs.h
lesson_10/src/: sub_funcs.cpp
lesson_10/src/modulation/: BPSK_modulator.cpp  main.cpp
lesson_10/src/receiver/: down_sampling.cpp  main.cpp  quantizater.cpp
lesson_10/src/receiver/symb_sync/: symb_sync_model.py
lesson_2/: CMakeLists.txt
lesson_2/src/: IQsamples_parser.py  main.cpp
lesson_3/src/: IQsamples_parser.py  main.cpp  signal.txt  signal_visualization.py  test.cpp  test.txt
lesson_4/: CMakeLists.txt
lesson_4/modulation/: symbol_generator.py
lesson_4/src/: main.cpp  test.cpp
lesson_5/: CMakeLists.txt
lesson_5-6/audio_converter/: audio_bin.pcm
lesson_5-6/modulation/: QPSK_modulator.cpp  main.cpp  modulation.h  symbol_generator.py
lesson_5-6/src/: main.cpp
lesson_5/audio_converter/: audio_to_pcm.py  pcm_to_audio.py
lesson_5/modulation/: BPSK_modulator.cpp  symbol_generator.py
lesson_5/my_venv/: pyvenv.cfg
lesson_5/src/: IQsamples_parser.py  main.cpp  read_pcm.py
lesson_7/: CMakeLists.txt
lesson_7/includes/: modulation.h  subfuncs.h
lesson_7/src/: sub_funcs.cpp
lesson_7/src/PS_filter/: ps_filter.cpp
lesson_7/src/audio_converter/: audio_to_pcm.py
lesson_7/src/modulation/: QPSK_modulator.cpp  main.cpp
lesson_7/src/py_sub_prog/: read_pcm.py
lesson_7/src/sdr/: main.cpp
lesson_8/includes/: subfuncs.h
lesson_8/src/PS_filter/: ps_filter.cpp
lesson_8/src/audio_converter/: pcm_to_audio.py
lesson_8/src/modulation/: BPSK_modulator.cpp  main.cpp  upsampling.cpp
lesson_8/src/py_sub_prog/: read_pcm.py  test.py
lesson_9/includes/: filters.h  modulation.h  subfuncs.h
lesson_9/src/: sub_funcs.cpp
lesson_9/src/filters/: match_filter.cpp  ps_filter.cpp
lesson_9/src/modulation/: BPSK_modulator.cpp  main.cpp  upsampling.cpp
lesson_9/src/py_sub_prog/: receiver.py  test.py
lesson_9/src/receiver/: BPSK_demodulator.cpp  QPSK_demodulator.cpp  down_sampling.cpp  main.cpp
lesson_9/src/sdr/: main.cpp
main/: RX.cpp  TX.cpp  main.cpp
pcm/: tx_samples.pcm
scripts/: build.sh  install.sh  run_two_sdr.sh  uninstall.sh
src/RX/: RX.cpp  fft.hpp
src/RX/MF/: match_filter.cpp
src/RX/decoder/: bin2str.cpp
src/RX/demapper_table_generator/: BPSK_table_generator.cpp  QAM16_table_generator.cpp  QAM_demapper_table_gen.cpp  QPSK_table_generator.cpp
src/RX/demodulator/: BPSK_demodulator.cpp  QAM16_demodulator.cpp  QAM_demodulator.cpp  QPSK_demodulator.cpp
src/RX/downsampler/: downsampler.cpp
src/RX/downscaler/: downscaler.cpp
src/RX/quantizater/: BPSK_quantizater.cpp  QAM16_quantizater copy.cpp  QAM_quantizater.cpp  QPSK_quantizater.cpp  quantizater.cpp
src/RX/subfuncs/: dec2bin.cpp  getters.cpp  processing.cpp  read_pcm.cpp  setters.cpp
src/RX/symbol_sync/: gardner_scheme.cpp  rx1.pcm  rx2.pcm  sdr2sdr_qpsk.pcm  sfsf.py  tst.py  tx_samples.pcm
src/RX/synchronizer/: coarse_freq_offset.cpp  corr_receiving.cpp  costas_loop.cpp  gardner_scheme.cpp
src/TX/: OFDM.cpp  TX.cpp
src/TX/PSF/: pulse_shaping_filter.cpp
src/TX/barker_code/: add_barker_to_message.cpp  generate_barker_code.cpp
src/TX/coder/: str2bin.cpp
src/TX/mapper_table_generator/: BPSK_table_generator.cpp  QAM16_table_generator.cpp  QPSK_table_generator.cpp
src/TX/modulator/: BPSK_modulator.cpp  QAM16_modulator.cpp  QPSK_modulator.cpp  mapper_table_gen.cpp  modulation.cpp
src/TX/overhead_encoder/: add_barker_to_message.cpp  generate_barker_code.cpp
src/TX/pcm/: tx_samples.pcm
src/TX/subfuncs/: dec2bin.cpp  getters.cpp  processing.cpp  setters.cpp  write2pcm.cpp
src/TX/upsampler/: upsampling.cpp
src/TX/upscaler/: upscaler.cpp
src/general/filter/: convolve.cpp  downsampling.cpp  upsampling.cpp
src/general/subfuncs/: bits_to_pam_lvl.cpp  dec2bin.cpp  downscaling.cpp  read_pcm.cpp  upscaling.cpp  write_pcm.cpp
src/main/: main.cpp  pluto_lib.cpp  run_two_sdr.sh
src/main/pluto_lib/: pluto_rx_tx.cpp  pluto_setup.cpp
src/pluto_lib/: pluto_rx_tx.cpp  pluto_setup.cpp
src/sdr/: main.cpp  run_two_sdr.sh  rxdata1.pcm  signal_visualization.py  txdata1.pcm
tests/: RX_test.cpp  TX_RX_test.cpp  TX_test.cpp  main.cpp
visualization/: ImGUI_interface.cpp  lab1.py  realtime_visual.grc  visualization.py
